[package]
name = "frost-dalek"
version = "0.1.0"
authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
edition = "2018"
description = "FROST: Flexible Round-Optimised Threshold Signature using the Ristretto group"
license = "MIT"

[dependencies]
curve25519-dalek = { version = "3", default-features = false }
rand = { version = "0.7" }
sha2 = { version = "*" }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[features]
default = ["std", "u64_backend"]

nightly = ["curve25519-dalek/nightly"]
std = ["curve25519-dalek/std"]
alloc = ["curve25519-dalek/alloc"]

# The u32 backend uses u32s with u64 products.
u32_backend = ["curve25519-dalek/u32_backend"]
# The u64 backend uses u64s with u128 products.
u64_backend = ["curve25519-dalek/u64_backend"]
# The SIMD backend uses parallel formulas, using either AVX2 or AVX512-IFMA.
simd_backend = ["nightly", "curve25519-dalek/simd_backend"]
