[package]
name = "frost-dalek"
version = "0.2.0"
authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
edition = "2018"
description = "FROST: Flexible Round-Optimised Threshold Signature using the Ristretto group"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/isislovecruft/frost-dalek"
homepage = "https://dalek.rs"
documentation = "https://docs.rs/frost-dalek"
keywords = ["cryptography", "frost", "ristretto", "signature", "threshold-signature"]
categories = ["cryptography"]
exclude = [ ".gitignore" ]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-dalek-3.0.2/rustdoc-include-katex-header.html"]

[dependencies]
curve25519-dalek = { version = "3", default-features = false }
rand = { version = "0.7" }
sha2 = { version = "0.9" }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { version = "0.3" }
ed25519-dalek = { version = "1", default-features = false }

[[bench]]
name = "dalek_benchmarks"
harness = false

[features]
default = ["std", "u64_backend"]

nightly = ["curve25519-dalek/nightly", "ed25519-dalek/nightly"]
std = ["curve25519-dalek/std", "ed25519-dalek/std"]
alloc = ["curve25519-dalek/alloc", "ed25519-dalek/alloc"]

# The u32 backend uses u32s with u64 products.
u32_backend = ["curve25519-dalek/u32_backend", "ed25519-dalek/u32_backend"]
# The u64 backend uses u64s with u128 products.
u64_backend = ["curve25519-dalek/u64_backend", "ed25519-dalek/u64_backend"]
# The SIMD backend uses parallel formulas, using either AVX2 or AVX512-IFMA.
simd_backend = ["curve25519-dalek/simd_backend", "ed25519-dalek/simd_backend"]
